Criado Controller, Model, Service e Respository

--- a/exemplos-spring/design-patters-spring/src/main/resources/application.properties
+++ b/exemplos-spring/design-patters-spring/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=368091
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+## Endpoint JSON documentação do Swagger
+springdoc.api-docs.path=/api-docs
+## Para acessar o Swagger UI(página html): http://localhost:8080/swagger-ui/index.html
